# wgpu-sky-rendering

./: Cargo.toml  README.md  index.html  package.json  vite.config.ts
assets/: isocahedron.gltf
core_engine/: Cargo.toml
core_engine/src/: lib.rs
src/: angle.rs  camera.rs  ecs.rs  input.rs  lib.rs  main.rs  math.rs  orbit.rs  physics.rs  pipelines.rs  projection.rs  render.rs  render_desc.rs  resources.rs  shared.rs  texture.rs  time.rs  triangulation.rs  uniform.rs  vertex.rs  world.rs
src/shaders/: allsky.frag  allsky.vert
