[package]
name = "allsky-proj"
version = "0.1.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23.14"
winit = { version = "0.29", features = ["rwh_05"]}
env_logger = "0.10"
log = "0.4"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18.0"
num-traits = "0.2.14"
byte-slice-cast = "1.0.0"
wgpu = { version = "22.0", features = [ "glsl" ] }
naga = "22.1.0"
pollster = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

#[build-dependencies]
#anyhow = "1.0"
#fs_extra = "1.2.0"
#glob = "0.3"
#shaderc = "0.8"

# used to generate SPIR-V for the Web target
#[target.'cfg(target_arch = "wasm32")'.dependencies.naga]
#git = "https://github.com/gfx-rs/naga"
#tag = "gfx-25"
#features = ["wgsl-in", "spv-out"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.73" # remember to change version in wiki as well
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl", "glsl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
js-sys = "0.3.50"
wasm-bindgen-futures = "0.4.30"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
